--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Name(s):  Daniel Leavitt (dpleavit) & Mark Kong ( )
+Name(s):  Daniel Leavitt (dpleavit) & Mark Kong (mkong04)
 Special Instructions:	N/A
 Notes:  N/A
